--- a/static/styles.css
+++ b/static/styles.css
@@ -44,13 +44,14 @@ nav ul li a {
     text-decoration: none;
 }
 
-/* Hero Section Styles */
 .hero {
-    background-color: #f4f4f4;
+    background-size: cover;
+    background-position: center;
     padding: 50px 0;
+    height:60vh;
     text-align: center;
+    color: #fff; 
 }
-
 .hero h2 {
     margin-bottom: 20px;
 }
@@ -65,6 +66,7 @@ nav ul li a {
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
+    
 }
 
 /* About Section Styles */
