--- a/templates/home.html
+++ b/templates/home.html
@@ -5,16 +5,14 @@
 
 {% block content %}
     <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-content">
-            <h2>Welcome to Disaster Management</h2>
-            <p>Empowering communities to respond effectively to disasters.</p>
-            <a href="{% url 'report_disaster' %}" class="btn btn-primary">Report a Disaster</a>
-        </div>
-        <div class="hero-image">
-            <img src="{% static 'hero_image.jpg' %}" alt="Disaster Management Hero Image">
-        </div>
-    </section>
+<section class="hero" style=" background-image: url('static/images/adam-wilson-wCKzi8nDkw8-unsplash.jpg');">
+    <div class="hero-content">
+        <h2>Welcome to Disaster Management</h2>
+        <p>Empowering communities to respond effectively to disasters.</p>
+        <a href="{% url 'report_disaster' %}" class="btn btn-primary">Report a Disaster</a>
+    </div>
+</section>
+
 
     <!-- About Section -->
     <section class="about">
@@ -33,7 +31,7 @@
         <div class="disasters-grid">
             <!-- Display previous disasters here -->
             <div class="disaster-item">
-                <img src="{% static 'disaster1.jpg' %}" alt="Previous Disaster Image">
+                <img src="{% static '/images/jonathan-ford-6ZgTEtvD16I-unsplash.jpg' %}" alt="Previous Disaster Image">
                 <h3>Disaster Name</h3>
                 <p>Description of the disaster...</p>
             </div>
@@ -48,7 +46,7 @@
     <section class="reviews">
         <h2>What People are Saying</h2>
         <div class="review">
-            <img src="{% static 'reviewer1.jpg' %}" alt="Reviewer Image">
+            <img src="{% static '/images/hermes-rivera-R1_ibA4oXiI-unsplash.jpg' %}" alt="Reviewer Image">
             <blockquote>"This platform helped us immensely during a recent disaster. Highly recommended!"</blockquote>
             <cite>John Doe</cite>
         </div>
