--- a/static/styles.css
+++ b/static/styles.css
@@ -7,7 +7,7 @@
 
 /* Global Styles */
 body {
-    font-family: Arial, sans-serif;
+    font-family:'Courier New', Courier, monospace;
     line-height: 1.6;
 }
 
@@ -136,9 +136,11 @@ nav ul li a {
     font-style: italic;
 }
 
-/* Footer Styles */
 footer {
-    background-color: #333;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #000000;
     color: #fff;
     text-align: center;
     padding: 20px 0;
