--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Disaster Management{% endblock %}</title>
   <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
-
+  {% block css %}{% endblock %}
 </head>
 <body>
     <header>
@@ -17,7 +17,23 @@
                 <li><a href="{% url 'report_disaster' %}">Report Disaster</a></li>
                 <li><a href="{% url 'forum' %}">Forum</a></li>
                 <li><a href="{% url 'news' %}">News</a></li>
+                
             </ul>
+            {% if user.is_authenticated %}
+            <ul>
+                <li><a href="{% url 'profile' %}">Profile</a></li>
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+            </ul>
+            
+            {% else %}
+            <ul>
+                <li><a href="{% url 'login' %}">Login</a></li>
+                <li><a href="{% url 'signup' %}">Register</a></li>
+
+            </ul>
+            {% endif %}
+           
+
         </nav>
     </header>
     <main>
