--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,27 @@
+{%load static%}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{% static 'login.css' %}">
     <title>Login</title>
 </head>
 <body>
-    <h2>Login</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Login</button>
-    </form>
+    <div class="container">
+        <img src="{% static '/images/logo.png' %}" alt="logo">
+        <div>
+            <h2>Login</h2>
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                {% if form.errors %}
+                    <div class="error">{{ form.errors }}</div>
+                {% endif %}
+                <button type="submit">Login</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
