--- a/templates/report_disaster.html
+++ b/templates/report_disaster.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'report.css' %}">
 {% endblock %}
 
+
 {% block content %}
-    <section>
+   
+    <div class="section">
         <h2>Report a Disaster</h2>
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
@@ -38,5 +40,5 @@
             <input type="file" id="image" name="image"><br><br>
             <button type="submit">Submit</button>
         </form>
-    </section>
+    </div>
 {% endblock %}
